--- a/Untitled-2.css
+++ b/Untitled-2.css
@@ -1,16 +1,13 @@
 @charset "utf-8";
 /* CSS Document */
 
-@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600;700;800;900&display=swap');
-
-
 * {
   margin: 0;
   padding: 0;
 }
 html,
 body {
-  font-family: 'Montserrat', sans-serif;
+  font-family: '#9Slide03 Montserrat';
   font-size: 22px;
 }
 
